--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-
+<h2>Test</h2>
 
 <% if user_signed_in? %>
   <p>Coucou <%= current_user.email %> </p>
