Change 'Coucou' into 'Hi'

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 <h2>Test</h2>
 
 <% if user_signed_in? %>
-  <p>Coucou <%= current_user.email %> </p>
+  <p>Hi <%= current_user.email %> </p>
 <% else %>
   <p>Pas coucou</p>
 <% end %>
